gems for Heroku

--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -17,6 +17,7 @@
   @extend .columns;
   }
 @mixin six-columns-centered {
+  @extend .small-6 !optional;
   @extend .small-6;
   @extend .columns;
   @extend .text-center;
